...
            selectedIcon: Icon(Icons.donut_large_rounded),
            label: 'Updates',
          ),
          const NavigationDestination(
            icon: Icon(Icons.grid_view_outlined),
            selectedIcon: Icon(Icons.grid_view_rounded),
            label: 'Tools',
          ),
        ],
      ),
    );
  }
}
...
